bugfix of loader.

--- a/retrieveFigures.ipynb
+++ b/retrieveFigures.ipynb
@@ -190,6 +190,86 @@
     "plt.plot(bins_count[1:], cdf, label=\"CDF\")\n",
     "plt.legend()"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import torch\n",
+    "import torch.nn as nn\n",
+    "import scipy.io as scio\n",
+    "import h5py\n",
+    "import numpy as np"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<KeysViewHDF5 ['val']>\n",
+      "ValuesViewHDF5(<HDF5 file \"val.mat\" (mode r)>)\n"
+     ]
+    }
+   ],
+   "source": [
+    "data = h5py.File(r'E:\\\\Code_shaohua\\\\datasets\\\\qdg_umi5g_7p68\\\\val.mat')\n",
+    "\n",
+    "print(data.keys())\n",
+    "print(data.values())\n",
+    "train = np.array(data['val'])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(30000, 32, 64)\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(train.shape)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "TypeError",
+     "evalue": "'KeysViewHDF5' object is not subscriptable",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[1;32me:\\Code_shaohua\\Python\\QCSMIMO\\retrieveFigures.ipynb 单元格 9\u001b[0m line \u001b[0;36m1\n\u001b[1;32m----> <a href='vscode-notebook-cell:/e%3A/Code_shaohua/Python/QCSMIMO/retrieveFigures.ipynb#X11sZmlsZQ%3D%3D?line=0'>1</a>\u001b[0m data\u001b[39m.\u001b[39;49mkeys()[\u001b[39m0\u001b[39;49m]\n",
+      "\u001b[1;31mTypeError\u001b[0m: 'KeysViewHDF5' object is not subscriptable"
+     ]
+    }
+   ],
+   "source": [
+    "data."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
