debug data loader ok.

--- a/retrieveFigures.ipynb
+++ b/retrieveFigures.ipynb
@@ -193,7 +193,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -245,23 +245,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "a = np.array([1+2j, 3+4j, 5+6j])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
-     "ename": "TypeError",
-     "evalue": "'KeysViewHDF5' object is not subscriptable",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[1;32me:\\Code_shaohua\\Python\\QCSMIMO\\retrieveFigures.ipynb 单元格 9\u001b[0m line \u001b[0;36m1\n\u001b[1;32m----> <a href='vscode-notebook-cell:/e%3A/Code_shaohua/Python/QCSMIMO/retrieveFigures.ipynb#X11sZmlsZQ%3D%3D?line=0'>1</a>\u001b[0m data\u001b[39m.\u001b[39;49mkeys()[\u001b[39m0\u001b[39;49m]\n",
-      "\u001b[1;31mTypeError\u001b[0m: 'KeysViewHDF5' object is not subscriptable"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "complex128\n",
+      "float64\n"
      ]
     }
    ],
    "source": [
-    "data."
+    "print(a.dtype)\n",
+    "b=np.real(a)\n",
+    "print(b.dtype)"
    ]
   },
   {
